# python-fastapi-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_docker_image.yml
app/: main.py
python_fastapi_template/: init.py  main.py
python_fastapi_template/applications/app/schemas/: adapter.py
python_fastapi_template/core/: deps.py  events.py  exception.py  responses.py  settings.py
python_fastapi_template/core/middlewares/: errors.py  json_response.py
python_fastapi_template/utils/: basic.py  logger.py
tests/: routes_test.py
